[gd_scene load_steps=12 format=3 uid="uid://blav18l5gcurw"]

[ext_resource type="Texture2D" uid="uid://gvcqh1xdg7bu" path="res://dpr.svg" id="1_4yopm"]
[ext_resource type="Script" path="res://texture_rect.gd" id="2_32y0b"]
[ext_resource type="Theme" uid="uid://crhd4gd5uf7la" path="res://pixel.tres" id="3_na07g"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ssu81"]

[sub_resource type="Sky" id="Sky_dx418"]

[sub_resource type="Environment" id="Environment_iyu6b"]
background_mode = 1
background_color = Color(0.868985, 0.868985, 0.868985, 1)
sky = SubResource("Sky_dx418")

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_lt67h"]

[sub_resource type="Compositor" id="Compositor_juq88"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0hs6"]
size = Vector2(756, 756)

[sub_resource type="SphereMesh" id="SphereMesh_e6tlk"]

[sub_resource type="LabelSettings" id="LabelSettings_qmxdd"]
font_color = Color(0, 0, 0, 1)
outline_size = 5
outline_color = Color(0.887751, 0.257859, 0.741466, 1)

[node name="Node2D" type="Node2D"]
material = SubResource("CanvasItemMaterial_ssu81")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_iyu6b")
camera_attributes = SubResource("CameraAttributesPractical_lt67h")
compositor = SubResource("Compositor_juq88")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 1284.0
offset_top = -31.0
offset_right = 2040.0
offset_bottom = 725.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_4yopm")
script = ExtResource("2_32y0b")
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="TextureRect"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextureRect/Area2D"]
position = Vector2(378, 378)
scale = Vector2(1.1, 1)
shape = SubResource("RectangleShape2D_g0hs6")
debug_color = Color(1, 0, 0, 0.145098)

[node name="bloblo" type="MeshInstance2D" parent="TextureRect"]
scale = Vector2(20, 20)
mesh = SubResource("SphereMesh_e6tlk")

[node name="Label" type="Label" parent="TextureRect/bloblo"]
offset_left = -1.0
offset_top = -1.15
offset_right = 40.0
offset_bottom = 39.85
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
text = "0"
label_settings = SubResource("LabelSettings_qmxdd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("3_na07g")
text = "Background Image"
metadata/_edit_use_anchors_ = true

[node name="TextEdit" type="TextEdit" parent="Label"]
layout_mode = 0
offset_top = 25.0
offset_right = 175.0
offset_bottom = 78.0
theme = ExtResource("3_na07g")
placeholder_text = "/home/naitsirhc/kboy.png"
metadata/_edit_use_anchors_ = true

[node name="clickanywhere" type="Label" parent="."]
offset_top = 85.0
offset_right = 145.0
offset_bottom = 108.0
theme = ExtResource("3_na07g")
text = "Click points on the image to make a movement map, ctrl+z to undo
"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="."]
offset_top = 344.0
offset_right = 145.0
offset_bottom = 367.0
theme = ExtResource("3_na07g")
text = "File Name"
metadata/_edit_use_anchors_ = true

[node name="TextEdit" type="TextEdit" parent="Label2"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.130435
anchor_bottom = -0.130435
offset_top = 25.0
offset_right = 175.0
offset_bottom = 78.0
placeholder_text = "Preview.map"
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_top = 424.0
offset_right = 81.0
offset_bottom = 455.0
theme = ExtResource("3_na07g")
text = "Save"

[node name="bloblo2" type="MeshInstance2D" parent="."]
position = Vector2(1262, -31)
scale = Vector2(20, 20)
mesh = SubResource("SphereMesh_e6tlk")

[node name="Label" type="Label" parent="bloblo2"]
offset_left = -1.5
offset_top = -1.15
offset_right = 40.5
offset_bottom = 39.85
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
text = "Spwn"
label_settings = SubResource("LabelSettings_qmxdd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="."]
offset_left = 81.0
offset_top = 424.0
offset_right = 175.0
offset_bottom = 455.0
theme = ExtResource("3_na07g")
text = "Load"

[connection signal="input_event" from="TextureRect/Area2D" to="TextureRect" method="clickpoints"]
[connection signal="text_changed" from="Label/TextEdit" to="TextureRect" method="_on_text_edit_text_changed"]
[connection signal="button_up" from="Button" to="TextureRect" method="save"]
[connection signal="button_up" from="Button2" to="TextureRect" method="load"]
